MOD: footer no longer overlaps content

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,6 +76,7 @@ a:hover {
     width: 50em;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 250px;
 }
 
 
@@ -112,16 +113,17 @@ a:hover {
 
 /*** FOOTER ***/
 
-*,
+/**,
 *:before,
 *:after {
   box-sizing: inherit;
 }
-
+*/
 .site-footer {
     padding: 30px 0;
     background: #e8e8e8;
     position: absolute;
+    /*position: relative;*/
     margin-top: 6rem;
     padding-top: 3rem;
     color: #111;
@@ -167,7 +169,6 @@ a:hover {
     }
 }
 
-/* TODO:  despite changing line 123, did NOT change grid-col vals in lines 134-162*/
 @media screen and (min-width: $on-palm) {
     .cfbgrid .cfbcol-4 {
         grid-column: span 5;
